Continue our exercise in retrocomputing